++code smell correction